<resources>
    <string name="app_name">Medet</string>
    <string name="default_web_client_id">168420601752-ad3fh2snlegm3k27dpar46s7pstjkj3s.apps.googleusercontent.com</string>
    <string name="title_activity_logged_out">LoggedOutActivity</string>
    <string name="medet">Medet</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="dosage_plan">Dosage Plan</string>
    <string name="device_settings">Device Settings</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="user_settings">User Settings</string>
    <string name="main_page_title">Time Until Next Dose</string>
    <string name="time_till_dose">8:14:54</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="alarm_lights">Alarms Lights</string>
    <string name="send_alerts">Send Alerts</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="save">Save</string>
    <string name="register">Register</string>
    <string name="pin">Pin:</string>
    <string name="phone_no">Phone Number:</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="add_users">Add User</string>
    <string name="manage_users">Manage Users</string>
    <string name="adjust_doses">Adjust Doses</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="enter_pin">Enter PIN</string>


</resources>