<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/sound_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/alarm_sound"
            android:backgroundTint="#00DB4A"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/alarm_volume"
            android:gravity="center"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/volume_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="1.0"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/lights_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/alarm_lights"

            android:backgroundTint="@color/red_button"/>

        <Button
            android:id="@+id/alerts_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/send_alerts"
            android:backgroundTint="#00DB4A"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/save"
            android:backgroundTint="@color/light_grey"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>