<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/white_background"
        android:paddingTop="55dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:textColor="@color/black"
                android:textSize="64sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/medet"
                />

            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="778dp"
                android:orientation="vertical"
                android:paddingHorizontal="24dp"
                android:paddingTop="29dp"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:text="@string/first_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/white_background_with_stroke"
                    android:orientation="vertical"
                    android:paddingHorizontal="17dp"
                    android:paddingVertical="15dp">

                    <TextView
                        android:id="@+id/first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/last_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/white_background_with_stroke"
                    android:orientation="vertical"
                    android:paddingHorizontal="17dp"
                    android:paddingVertical="15dp">

                    <TextView
                        android:id="@+id/last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:text="@string/phone_no"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/white_background_with_stroke"
                    android:orientation="vertical"
                    android:paddingHorizontal="17dp"
                    android:paddingVertical="15dp">

                    <TextView
                        android:id="@+id/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="9dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/email"
                    />
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_background_with_stroke"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="17dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/email"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        />
                </LinearLayout>

                <TextView
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="9dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/password"
                    />
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_background_with_stroke"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="17dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        />
                </LinearLayout>

                <TextView
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="9dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/pin"
                    />
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_background_with_stroke"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="17dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/pin"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_background"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingVertical="6dp">

                    <TextView
                        android:id="@+id/register_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView
        >
</LinearLayout>