<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/white_background"
        android:paddingTop="55dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:textColor="@color/black"
                android:textSize="64sp"
                android:layout_marginBottom="31dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/medet"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/login_logo"
                android:layout_width="225dp"
                android:layout_height="178dp"
                android:layout_marginHorizontal="89dp"
                android:layout_marginBottom="44dp"
                android:scaleType="fitXY"
                android:src="@drawable/logo"
                app:shapeAppearanceOverlay="@style/logo_corner" />
            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="362dp"
                android:background="@drawable/white_background_with_stroke"
                android:paddingTop="29dp"
                android:paddingBottom="30dp"
                android:paddingHorizontal="24dp"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="9dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/email"
                    />
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_background_with_stroke"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="17dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/email"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        />
                </LinearLayout>
                <TextView
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/password"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_background_with_stroke"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="17dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:background="@drawable/button_background"
                    android:paddingVertical="6dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/login_button"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/login_button"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/forgot_password"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView
>
</LinearLayout>